Fix the build of base/numerics with GCC

Initialize the uninitialized variables where the build is failing.

BUG=776705

Change-Id: I5782e18086a752b3676f8738930bf0553f3f97ad
Reviewed-on: https://chromium-review.googlesource.com/730709
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Justin Schuh <jschuh@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510753}
Former-commit-id: ec48e4ae39eea7377870732a1bb9cf62e84af42e